[package]
name = "gamepadoverip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.10.1"
vigem-client = "0.1.4"
vigem = "0.9.1"

[[bin]]
name = "gamepadoveripclient"
path = "src/client.rs"


[[bin]]
name = "gamepadoveripserver"
path = "src/server.rs"



[profile.release]
opt-level = 3